@@ -31,12 +31,6 @@ using namespace std;
 MBRData::~MBRData(void) {
 } // MBRData destructor
 
-/* // Assignment operator -- copy entire set of MBR data.
-MBRData & MBRData::operator=(const MBRData & orig) {
-   BasicMBRData::operator=(orig);
-   return *this;
-} // MBRData::operator=() */
-
 // Assignment operator -- copy entire set of MBR data.
 MBRData & MBRData::operator=(const BasicMBRData & orig) {
    BasicMBRData::operator=(orig);
